Ensure text remains visible while fonts load

--- a/www/sass/styles.scss
+++ b/www/sass/styles.scss
@@ -11,6 +11,7 @@
   font-style: normal;
   font-weight: normal;
   src: url("/static/fonts/eb-garamond/regular.ttf");
+  font-display: swap;
 }
 
 @font-face {
@@ -18,6 +19,7 @@
   font-style: italic;
   font-weight: normal;
   src: url("/static/fonts/eb-garamond/italic.ttf");
+  font-display: swap;
 }
 
 @font-face {
@@ -25,6 +27,7 @@
   font-style: normal;
   font-weight: 500;
   src: url("/static/fonts/eb-garamond/medium.ttf");
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +35,7 @@
   font-style: normal;
   font-weight: bold;
   src: url("/static/fonts/eb-garamond/bold.ttf");
+  font-display: swap;
 }
 
 html,
